--- a/MyCronometer/app/src/main/res/layout/activity_main.xml
+++ b/MyCronometer/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.riyad.mycronometer.MainActivity">
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Iniciar"
+        android:id="@+id/bt_Iniciar"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="52dp"
+        android:onClick="inicia"/>
 </RelativeLayout>
